# Txt2Ply_code

./: CMakeLists.txt  main.cpp  txt2ply.cpp  txt2ply.h  widget.cpp  widget.h  widget.ui
